@@ -1,3 +1,8 @@
+buffered-input-stream
+desktop-app-info
+g-icon
+simple-async-result
+unix-streams
 data-input-stream
 data-output-stream
 g-file
